--- a/ncert/12/13/3/13/cond.tex
+++ b/ncert/12/13/3/13/cond.tex
@@ -8,17 +8,17 @@ See \tabref{tab:12/13/3/13/1}.
 %
 From the given information, 
 \begin{align}
-	p_{X}(0)&=p_{X}(1) = \frac{1}{2},  p_{Y}(1)= \frac{4}{5}
+	p_{X}\brak{0}&=p_{X}\brak{1} = \frac{1}{2},  p_{Y}\brak{1}= \frac{4}{5}
 \\
-\therefore p_{Y|X}(1|1)&= \frac{p_{Y}(1) p_{X|Y}(1|1)}{p_{X}(1)}\\
+\therefore p_{Y|X}\brak{1|1}&= \frac{p_{Y}\brak{1} p_{X|Y}\brak{1|1}}{p_{X}\brak{1}}\\
 &= \frac{\frac{4}{5} \times \frac{1}{2}}{\frac{1}{2}}
 = \frac{4}{5}
 \end{align}
 Here, we have used the fact that
 \begin{align}
-p_{X|Y}(1|1)
+p_{X|Y}\brak{1|1}
 =
-p_{X}(1) = \frac{1}{2}.
+p_{X}\brak{1} = \frac{1}{2}.
 \end{align}
 since the appearance of a head upon a coin toss has nothing to do with A.
 
