--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -190,12 +190,14 @@ appears. The probability that actually there was head is
 \input{ncert/12/13/3/13/cond.tex}
 \item 
 		If $A$ and $B$ are two events such that $A \subset B$ and $\pr{B} \neq 0$, then which of the following is correct ?
+\begin{multicols}{2}
 \begin{enumerate}
-\item $\pr{A \mid B} = \frac{\pr{B}}{\pr{A}}$ 
-\item $\pr{A \mid B} < \pr{A}$
-\item $\pr{A \mid B} \geq \pr{A}$  
+\item $\pr{A | B} = \frac{\pr{B}}{\pr{A}}$ 
+\item $\pr{A | B} < \pr{A}$
+\item $\pr{A | B} \geq \pr{A}$  
 \item None of these
 \end{enumerate}
+\end{multicols}
 \solution
 \input{ncert/12/13/3/14/axioms.tex}
 \item $A$ and $B$ are two events such that $\pr{A} \neq 0$. Find $\pr{B \mid A}$, if
