--- a/axioms/word/cond.tex
+++ b/axioms/word/cond.tex
@@ -6,10 +6,12 @@
 	\\ \pr{A\text{ and }B \text{ fails}}&=0.15
 \end{align}
  Evaluate the following probabilities
+ \begin{multicols}{2}
  \begin{enumerate}
  \item $\pr{\text{A fails given B has failed}}$
  \item $\pr{\text{A fails alone}}$
 \end{enumerate}
+\end{multicols}
 		\solution
 		\input{ncert/12/13/6/15/main.tex}
   \item
