--- a/ncert/12/13/3/14/axioms.tex
+++ b/ncert/12/13/3/14/axioms.tex
@@ -10,7 +10,7 @@ Since
 \begin{align}
 	\pr{B} &\leq 1,
 	\\
-	1 \leq \frac{1}{\pr{B}}
+	1 &\leq \frac{1}{\pr{B}}
 	\\
 \implies	\pr{A} &\leq \frac{\pr{A}}{\pr{B}}
 \\
