--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -200,11 +200,13 @@ appears. The probability that actually there was head is
 \end{multicols}
 \solution
 \input{ncert/12/13/3/14/axioms.tex}
-\item $A$ and $B$ are two events such that $\pr{A} \neq 0$. Find $\pr{B \mid A}$, if
+\item $A$ and $B$ are two events such that $\pr{A} \neq 0$. Find $\pr{B|A}$, if
+\begin{multicols}{2}
 \begin{enumerate}
 \item $A$ is a subset of $B$
 \item $A \cap B = \phi$
 \end{enumerate}
+\end{multicols}
 \solution 
 	\input{ncert/12/13/6/1/cond.tex}
 	%
@@ -251,36 +253,39 @@ a black ball.\\
 \item A bag contains $(2n + 1)$ coins. It is known that $n$ of these coins have a head on
 both sides where as the rest of the coins are fair. A coin is picked up at random
 from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$
-, determine the value of $n$.\\
-\solution
+, determine the value of $n$.
+%\solution
 %\input{exemplar/12/13/3/52/main.tex}
 \item An urn contains $m$ white and $n$ black balls. A ball is drawn at random and is put
 back into the urn along with $k$ additional balls of the same colour as that of the
 ball drawn. A ball is again drawn at random. Show that the probability of
-drawing a white ball now does not depend on $k$.\\
-\solution
+drawing a white ball now does not depend on $k$.
+%\solution
 %\input{exemplar/12/13/3/40/main.tex}
 \item If $\pr{AB}=\frac{7}{10}$ and $\pr{B}=\frac{17}{20}$, then $\pr{A|B}$ equals
+\begin{multicols}{4}
 \begin{enumerate}
 \item $\frac{14}{17}$
 \item $\frac{17}{20}$
 \item $\frac{7}{8}$
 \item $\frac{1}{8}$
 \end{enumerate}
+\end{multicols}
 %\input{exemplar/12/13/3/57/main.tex}
 \item 
-A letter is known to have come either from TATANAGAR or from CALCUTTA. On the envelope, just two consecutive letter TA are visible. What is the probability that the letter came from TATANAGAR.\\
-\solution
+A letter is known to have come either from TATANAGAR or from CALCUTTA. On the envelope, just two consecutive letter TA are visible. What is the probability that the letter came from TATANAGAR.
+%\solution
 %\input{exemplar/12/13/3/44/main.tex}
-\item A bag contain (2n+1) coins. It is known that n of these coins have a head on both sides where as the rest of the coins are fair. A coin is picked up at random from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$, determine the value of n.
+\item A bag contain $(2n+1)$ coins. It is known that $n$ of these coins have a head on both sides where as the rest of the coins are fair. A coin is picked up at random from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$, determine the value of $n$.
 %\input{exemplar/12/13/3/52a/main.tex}
 \item By examining the chest X ray, the probability that TB is detected when a person
 is actually suffering is 0.99. The probability of an healthy person diagnosed to 
 have TB is 0.001. In a certain city, 1 in 1000 people suffers from TB. A person
 is selected at random and is diagnosed to have TB. What is the probability that
-he actually has TB? \\
+he actually has TB? 
 %\input{exemplar/12/13/3/47/main.tex}
 	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
+		\iffalse
 	\item Probability that $A$ speaks truth is
 $\frac{4}{5}$ . A coin is tossed. A reports that a head
 appears. The probability that actually there was head is
@@ -292,5 +297,5 @@ appears. The probability that actually there was head is
 \item $\frac{2}{5}$
 \end{enumerate}
 \end{multicols}
+\fi
 \end{enumerate}
-
