conditional probability chapter complete

--- a/exemplar/12/13/3/19/main.tex
+++ b/exemplar/12/13/3/19/main.tex
@@ -1,13 +1,13 @@
 Let $X_i, i = 1,2,3,4$ denote a king in the $i$th draw.
 Then,
-\begin{align}
+\begin{multline}
 	\pr{X_{1}}=\frac{4}{52},\
 \pr{X_{2}|X_{1}} =\frac{3}{51},\
 	\pr{X_{3}|X_{2}X_{1}}=\frac{2}{50},\
 	\pr{X_{4}|X_{1}X_{2}X_{3}} =\frac{1}{49}
 	\\
 	\implies \pr{X_{1}X_{2}X_{3}X_{4}}  
-                                     = \frac{4}{52} \times \frac{3}{51} \times \frac{2}{50} \times \frac{1}{49} \\
+                                     = \frac{4}{52} \times \frac{3}{51} \times \frac{2}{50} \times \frac{1}{49} 
                                      = \frac{1}{270725}
-\end{align}
+\end{multline}
 which is the desired probability.
