--- a/exemplar/12/13/3/80/main.tex
+++ b/exemplar/12/13/3/80/main.tex
@@ -1,10 +1,10 @@
 Let $X_i \in \cbrak{0,1}, i \in 1,2$ represent the $i$th battery, 0 denoting the battery being dead.
 From the given information,
 \begin{align}
-	\pr{X_1=0}&=\frac{3}{8}, \pr{X_2=0|X_1=0}=\frac{2}{7}, 
+	p_{X_1}\brak{0}&=\frac{3}{8}, p_{X_2|X_1}\brak{0|0}=\frac{2}{7}, 
 \\
 \implies 
-\pr{X_1=0, X_2=0}&=\pr{X_1=0}\pr{X_2=0|X_1=0} =\frac{3}{28}
+	p_{X_1, X_2}\brak{0,0}&=p_{X_1}\brak{0}p_{X_2|X_1}\brak{0|0} =\frac{3}{28}
 \end{align}
 from
 \eqref{eq:axiom-cond}.
