--- a/app/mgf.tex
+++ b/app/mgf.tex
@@ -1,4 +1,4 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \numberwithin{figure}{enumi}
 \numberwithin{table}{enumi}
