--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{axioms/boolean/cond.tex}
 \input{axioms/word/cond.tex}
 \section{Random Variables}
-\subsection{Formulae}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
 %\subsection{Examples}
@@ -110,8 +109,19 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 %\subsection{Examples}
 %\section{Discrete Distributions}
 \section{Bernoulli}
+\subsection{Formulae}
+\input{app/mgf.tex}
 \input{ncert/bernoulli.tex}
 \input{ncert/dist.tex}
+%    \section{Binomial}
+%\input{ncert/binomial.tex}
+    \section{Uniform}
+\input{ncert/uni.tex}
+\section{Multinomial}
+\subsection{Formulae}
+\input{app/ident.tex}
+\subsection{NCERT}
+\input{ncert/multi.tex}
     \section{Miscellaneous}
 \input{ncert/misc.tex}
 \iffalse
@@ -146,7 +156,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \appendix
 \iffalse
 \section{ Z-transform}
-\input{app/mgf.tex}
 \section{Distributions}
 \input{conv-trans/main.tex}
 \section{Central Limit Theorem}
