\input{exemplar/12/13/3/74/main.tex} revised

--- a/ncert/multi.tex
+++ b/ncert/multi.tex
@@ -22,14 +22,24 @@ are drawn from the box, what is the probability that
 	\solution
 \input{ncert/12/13/2/3/multinom.tex}
 \item A box contains 3 orange balls, 3 green balls and 2 blue balls. Three balls are drawn at random from the box without replacement. The probability of drawing 2 green balls and one blue ball is
+	\begin{multicols}{4}
 \begin{enumerate}
-\item $\frac{3}{28}$\\
-\item $\frac{2}{21}$\\
-\item $\frac{1}{28}$\\
+\item $\frac{3}{28}$
+\item $\frac{2}{21}$
+\item $\frac{1}{28}$
 \item $\frac{167}{168}$
 \end{enumerate}
-%\input{exemplar/12/13/3/79/main.tex}
-\item %\input{exemplar/12/13/3/74/main.tex}
+\end{multicols}
+	\solution
+\input{exemplar/12/13/3/79/main.tex}
+\item A bag contain 5 red and 3 blue balls. If 3 balls are drawn at random without replacement, the probability of getting exactly one red ball is
+	\begin{multicols}{4}
+\begin{enumerate}
+	\item${\frac{45}{196}}$\qquad\item${\frac{135}{392}}$\qquad\item${\frac{15}{56}}$\qquad\item${\frac{15}{29}}$
+\end{enumerate}
+\end{multicols}
+\solution\\
+\input{exemplar/12/13/3/74/main.tex}
 \item A bag contains 5 red and 3 blue balls. If 3 balls are drawn at random without replacement the probability that exactly two of the three balls were red, the first ball being red is\\
 %\input{exemplar/12/13/3/75/main.tex}
     \end{enumerate}
