multinomial ncert section complete

--- a/ncert/multi.tex
+++ b/ncert/multi.tex
@@ -38,8 +38,9 @@ are drawn from the box, what is the probability that
 	\item${\frac{45}{196}}$\qquad\item${\frac{135}{392}}$\qquad\item${\frac{15}{56}}$\qquad\item${\frac{15}{29}}$
 \end{enumerate}
 \end{multicols}
-\solution\\
+\solution
 \input{exemplar/12/13/3/74/main.tex}
 \item A bag contains 5 red and 3 blue balls. If 3 balls are drawn at random without replacement the probability that exactly two of the three balls were red, the first ball being red is\\
-%\input{exemplar/12/13/3/75/main.tex}
+\solution
+\input{exemplar/12/13/3/75/main.tex}
     \end{enumerate}
