sum of r.v.s chapter to be created

--- a/main.tex
+++ b/main.tex
@@ -100,6 +100,11 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/cond.tex}
 \input{axioms/boolean/cond.tex}
 \input{axioms/word/cond.tex}
+    \section{Uniform Distribution}
+\subsection{Formulae}
+\input{app/uni.tex}
+\subsection{NCERT}
+\input{ncert/uni.tex}
 \section{Random Variables}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
@@ -115,8 +120,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/dist.tex}
 %    \section{Binomial}
 %\input{ncert/binomial.tex}
-    \section{Uniform}
-\input{ncert/uni.tex}
 \section{Multinomial}
 \subsection{Formulae}
 \input{app/ident.tex}
