--- a/ncert/uni.tex
+++ b/ncert/uni.tex
@@ -8,17 +8,19 @@
 \item A number less than 6 will appear
 \end{enumerate}
 \solution
-%\input{ncert/11/16/3/3/bernoulli.tex}
+\input{ncert/11/16/3/3/bernoulli.tex}
 \item All the jacks, queens and kings are removed from a deck of 52 playing cards. The remaining cards are well shuffled and then one card is drawn at random. Giving ace a value 1 similar value for other cards, find the probability that the card has a value 
 \begin{enumerate}
 	\item 7
 	\item greater than 7
 	\item less than 7
 \end{enumerate}
-%\input{exemplar/10/13/3/30/main.tex}
-\item Two dice are numbered 1,2,3,4,5,6 and 1,1,2,2,3,3 respectively. They are thrown and the sum of then numbers on them is noted. Find the probability of getting each sum from 2 to 9 seperately
 \solution
-%\input{exemplar/10/13/3/23/main.tex}
+\input{exemplar/10/13/3/30/main.tex}
+\item Two dice are numbered 1,2,3,4,5,6 and 1,1,2,2,3,3 respectively. They are thrown and the sum of then numbers on them is noted. Find the probability of getting each sum from 2 to 9 seperately
+	\\
+\solution
+\input{exemplar/10/13/3/23/main.tex}
 \item A game of chance consists of spinning an arrow
 which comes to rest pointing at one of the numbers
 1, 2, 3, 4, 5, 6, 7, 8 (see \figref{fig:ncert/10/15/1/12/my_label}), and these are equally
