--- a/exemplar/10/13/3/23/main.tex
+++ b/exemplar/10/13/3/23/main.tex
@@ -1,8 +1,4 @@
-The $Z$-transform of a die is defined as
-\begin{align}
-M_X(z) = {z^{-X}} = \sum_{k=-\infty}^{\infty}p_X(k)z^{-k}
-\end{align}
-
+From \eqref{eq:dice_pmf_xi},
 The $Z$-transform of the first die $X_1$ is given by 
 \begin{align}
 M_{X_1}(z) =  \frac{1}{6}\sum_{n = 1}^{6}z^{-n}
