--- a/main.tex
+++ b/main.tex
@@ -105,6 +105,11 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{app/uni.tex}
 \subsection{NCERT}
 \input{ncert/uni.tex}
+    \section{Sum of Random Variables}
+\subsection{Formulae}
+\input{app/mgf.tex}
+\subsection{NCERT}
+\input{ncert/sum.tex}
 \section{Random Variables}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
@@ -115,7 +120,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 %\section{Discrete Distributions}
 \section{Bernoulli}
 \subsection{Formulae}
-\input{app/mgf.tex}
+%\input{app/mgf.tex}
 \input{ncert/bernoulli.tex}
 \input{ncert/dist.tex}
 %    \section{Binomial}
