--- a/ncert/uni.tex
+++ b/ncert/uni.tex
@@ -17,15 +17,12 @@
 \end{enumerate}
 \solution
 \input{exemplar/10/13/3/30/main.tex}
-\item Two dice are numbered 1,2,3,4,5,6 and 1,1,2,2,3,3 respectively. They are thrown and the sum of then numbers on them is noted. Find the probability of getting each sum from 2 to 9 seperately
-	\\
-\solution
-\input{exemplar/10/13/3/23/main.tex}
 \item A game of chance consists of spinning an arrow
 which comes to rest pointing at one of the numbers
 1, 2, 3, 4, 5, 6, 7, 8 (see \figref{fig:ncert/10/15/1/12/my_label}), and these are equally
 likely outcomes. What is the probability that it will
-point at:
+point at
+\begin{multicols}{2}
 \begin{enumerate}
 \item 
 8?
@@ -36,9 +33,10 @@ a number greater than 2?
 \item 
 a number less than 9?
 \end{enumerate}
-\begin{figure} [p h]
+\end{multicols}
+\begin{figure} [H]
 	\centering
-	\resizebox{\columnwidth}{!}{\input{ncert/10/15/1/12/figs/tikz}}
+	\resizebox{0.7\columnwidth}{!}{\input{ncert/10/15/1/12/figs/tikz}}
     \caption{Spinner}
     \label{fig:ncert/10/15/1/12/my_label}
 \end{figure}
