--- a/app/mgf.tex
+++ b/app/mgf.tex
@@ -1,13 +1,20 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
-\numberwithin{equation}{enumi}
-\numberwithin{figure}{enumi}
-\numberwithin{table}{enumi}
 \item 
 The $Z$-transform of $X$ is defined as
 \begin{align}
 M_X(z) = E\sbrak{z^{-X}} = \sum_{k=-\infty}^{\infty}p_X(k)z^{-k}
 \label{eq:dice_xz}
 \end{align}
+\item For
+\eqref{eq:dice_pmf_xi},
+the $Z$-transform of $X$ is given by 
+\begin{align}
+P_{X}(z) =  \frac{1}{6}\sum_{n = 1}^{6}z^{-n}
+=\frac{z^{-1}\brak{1-z^{-6}}}{6\brak{1-z^{-1}}}, \quad \abs{z} > 1
+\label{eq:dice_xiz}
+\end{align}
+upon summing up the geometric progression.  
+%From \eqref{eq:dice_xiz}, 
 \item If $X_1$ and $X_2$ are independent, the MGF of 
 \begin{align}
 	X = X_1 + X_2
