--- a/main.tex
+++ b/main.tex
@@ -100,16 +100,26 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/cond.tex}
 \input{axioms/boolean/cond.tex}
 \input{axioms/word/cond.tex}
+\newpage
     \section{Uniform Distribution}
 \subsection{Formulae}
 \input{app/uni.tex}
 \subsection{NCERT}
 \input{ncert/uni.tex}
+\newpage
     \section{Sum of Random Variables}
 \subsection{Formulae}
 \input{app/mgf.tex}
 \subsection{NCERT}
 \input{ncert/sum.tex}
+\newpage
+\section{Bernoulli}
+\subsection{Formulae}
+\input{app/ber.tex}
+\subsection{NCERT}
+\input{ncert/bernoulli.tex}
+\input{ncert/dist.tex}
+\newpage
 \section{Random Variables}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
@@ -118,11 +128,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 %\section{Conditional Probability}
 %\subsection{Examples}
 %\section{Discrete Distributions}
-\section{Bernoulli}
-\subsection{Formulae}
-%\input{app/mgf.tex}
-\input{ncert/bernoulli.tex}
-\input{ncert/dist.tex}
 %    \section{Binomial}
 %\input{ncert/binomial.tex}
 \section{Multinomial}
