--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -1,6 +1,6 @@
-\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item A lot consists of 144 ball pens of which 20 are defective and the 
-    others are good. Nuri will buy a pen if it is good, but will not buy if it 
+    others are good. Navami will buy a pen if it is good, but will not buy if it 
     is defective. The shopkeeper draws one pen at random and gives it to her. 
     What is the probability that
     \begin{enumerate}
