\input{exemplar/10/13/3/33/main.tex} revised

--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -15,9 +15,9 @@ single student is selected at random to be the class monitor. The probability th
 selected student is not from A, B and C is \\
 \solution
 \input{exemplar/10/13/1/26/10.13.1.26.tex}
-\item A bag contains slips numbered from 1 to 100. If Fatima chooses a slip at random
+\item A bag contains slips numbered from 1 to 100. If Phulan chooses a slip at random
 from the bag, it will either be an odd number or an even number. Since this situation
-has only two possible outcomes, so, the probability of each is $\frac{1}{2}$.Justify.\\
+has only two possible outcomes, so, the probability of each is $\frac{1}{2}$. Justify.\\
 \solution
 \input{exemplar/10/13/2/14/prob.tex}
 \item A letter of English alphabets is chosen at random. Determine the probability that the letter is a consonant.\\
