--- a/main.tex
+++ b/main.tex
@@ -90,8 +90,13 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{app/bool.tex}
 \subsection{NCERT}
 \input{axioms/boolean/axioms.tex}
-%\subsection{Applications}
 \input{axioms/word/axioms.tex}
+\newpage
+\section{Bernoulli}
+\subsection{Formulae}
+\input{app/ber.tex}
+\subsection{NCERT}
+\input{ncert/bernoulli.tex}
 \newpage
 \section{Conditional Probability}
 \subsection{Formulae}
@@ -113,23 +118,18 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{NCERT}
 \input{ncert/sum.tex}
 \newpage
-\section{Bernoulli}
-\subsection{Formulae}
-\input{app/ber.tex}
+	\section{Binomial}
 \subsection{NCERT}
-\input{ncert/bernoulli.tex}
-\input{ncert/dist.tex}
+%\input{ncert/binomial.tex}
+    \section{Gaussian}
+\subsection{NCERT}
+%\input{ncert/gauss.tex}
 \newpage
 \section{Random Variables}
 \subsection{NCERT}
 \input{axioms/boolean/rand.tex}
 %\subsection{Examples}
 \input{randm/defs.tex}
-%\section{Conditional Probability}
-%\subsection{Examples}
-%\section{Discrete Distributions}
-%    \section{Binomial}
-%\input{ncert/binomial.tex}
 \section{Multinomial}
 \subsection{Formulae}
 \input{app/ident.tex}
