--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -23,7 +23,7 @@ has only two possible outcomes, so, the probability of each is $\frac{1}{2}$. Ju
 \item A letter of English alphabets is chosen at random. Determine the probability that the letter is a consonant.\\
     \solution
     \input{exemplar/10/13/3/33/main.tex}
-\item A carton of 24 bulbs contain 6 defective bulbs. One bulbs is drawn at random.
+\item A carton of 24 bulbs contain 6 defective bulbs. One bulb is drawn at random.
 What is the probability that the bulb is not defective? If the bulb selected is defective
 and it is not replaced and a second bulb is selected at random from the rest, what
 is the probability that the second bulb is defective?\\
@@ -36,10 +36,6 @@ is the probability that the second bulb is defective?\\
      	\end{enumerate}
 \solution
 \input{exemplar/10/13/3/31/main.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
-\\
-\solution
-\input{ncert/12/13/5/7/main.tex}
 \item If the letters of the word \textbf{ALGORITHM} are arranged at random in a row what
 is the probability the letters GOR must remain together as a unit?\\
 \solution
@@ -50,11 +46,19 @@ probability that the married couple will have nonadjacent desks?\\
 \solution
 \input{exemplar/11/16/3/2/main.tex}
 \item There are four men and six women on the city council.
-If one council member is selected for a committee at random,how likely is it that it is a woman?\\
+If one council member is selected for a committee at random, how likely is it that it is a woman?\\
 \solution
 \input{exemplar/11/16/3/6/11.16.3.6.tex}
-\item A girl calculates that the probability of her winning the first prize in a lottery is 0.08. If 6000 tickets are sold,how many tickets has she bought?\\
-(A) 40  (B)240  (C)480  (D)750 
+\item A girl calculates that the probability of her winning the first prize in a lottery is 0.08. If 6000 tickets are sold,how many tickets has she bought?
+	\begin{multicols}{4}
+    \begin{enumerate}
+	    \item  40  
+	    \item 240  
+	    \item 480  
+	    \item 750 
+\end{enumerate}
+\end{multicols}
+\solution
 \input{exemplar/10/13/1/23/ncert.tex}
 \item Three numbers are chosen from 1 to 20. Find the probability that they are not consecutive
 \begin{enumerate}
