--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -587,4 +587,8 @@ two children, what is the conditional probability that both are girls given that
 \end{enumerate}
 \solution
 		\input{ncert/12/13/1/12/binom.tex}
+\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
+\\
+\solution
+\input{ncert/12/13/5/7/main.tex}
 \end{enumerate}
