--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -61,15 +61,17 @@ If one council member is selected for a committee at random, how likely is it th
 \solution
 \input{exemplar/10/13/1/23/ncert.tex}
 \item Three numbers are chosen from 1 to 20. Find the probability that they are not consecutive
+	\begin{multicols}{4}
 \begin{enumerate}
-	\item $\frac{186}{190}$\\
-	\item $\frac{187}{190}$\\
-	\item $\frac{188}{190}$\\
+	\item $\frac{186}{190}$
+	\item $\frac{187}{190}$
+	\item $\frac{188}{190}$
 	\item $\frac{18}{\comb{20}{3}}$ 
 \end{enumerate}
+\end{multicols}
 \solution
 \input{exemplar/11/16/3/19/main.tex}
-\item Seven persons are to be seated in a row. What is the probabiity that two particular persons sit next to each other?\\
+\item Seven persons are to be seated in a row. What is the probability that two particular persons sit next to each other?\\
 \solution
 \input{exemplar/11/16/3/21/main.tex}
 \item A single letter is selected at random from the word ‘PROBABILITY’. The
