\input{ncert/10/15/2/4/main.tex} revised

--- a/exemplar/11/16/3/26/tables/Table2.tex
+++ b/exemplar/11/16/3/26/tables/Table2.tex
@@ -204,7 +204,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{0}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{Selection of non-vowels}}
+	{\gnumericPB{\centering}\gnumbox{Consonant}}
 \\
 \hhline{~|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
@@ -212,7 +212,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{1}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{Selection of vowels}}
+	{\gnumericPB{\centering}\gnumbox{Vowel}}
 \\
 \hhline{|---|}
 \end{tabular}
