--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -74,14 +74,18 @@ If one council member is selected for a committee at random, how likely is it th
 \item Seven persons are to be seated in a row. What is the probability that two particular persons sit next to each other?\\
 \solution
 \input{exemplar/11/16/3/21/main.tex}
-\item A single letter is selected at random from the word ‘PROBABILITY’. The
+\item A single letter is selected at random from the word `PROBABILITY'. The
 probability that it is a vowel is
+\rule{1cm}{0.01pt}.
+\\
+\solution 
 \input{exemplar/11/16/3/26/main2.tex}
 \item A letter is chosen at random from the word ‘ASSASSINATION’. Find the probability that letter is
+\rule{1cm}{0.01pt}.
 \begin{enumerate}
   \item  a vowel 
    \item    a consonant 
-\end{enumerate}.
+\end{enumerate}
 \solution
 \input{ncert/11/16/3/10/main.tex}
 \item A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball? If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
