\input{ncert/10/15/1/8/main.tex} done

--- a/ncert/10/15/1/8/main.tex
+++ b/ncert/10/15/1/8/main.tex
@@ -1,20 +1,18 @@
-Let 
+For
 \begin{align}
 X= \begin{cases} 
-      1 & \text{if drawn ball is red} \\
-      0 & \text{otherwise.} 
+      1 & \text{red} \\
+      0 & \text{otherwise}, 
    \end{cases}
 \end{align}
-\begin{enumerate}[label=(\roman*)]
-    \item Probability that the drawn ball is red
-    \begin{align}
-    \pr{X=1}
-    = \frac{3}{8}\\
-    \end{align}
-    \item Probability that the drawn ball is not red
-    \begin{align}
-     \pr{X=0}= 1-\frac{3}{8} = \frac{5}{8}
-    \end{align}
+\begin{enumerate}
+    \item $
+p
+    = \frac{3}{8}
+    $
+    \item 
+	    $
+     1-p = \frac{5}{8}
+     $
 \end{enumerate}
-
 
