--- a/ncert/10/5/1/21/bernoulli.tex
+++ b/ncert/10/5/1/21/bernoulli.tex
@@ -1,6 +1,6 @@
-		In this case, we have $X \sim Ber\brak{\frac{67}{72}}$. 
+		In this case, we have $X \sim \text{Ber}\brak{\frac{67}{72}}$. 
 Therefore, the desired probabilities are
-    \begin{enumerate}
+\begin{enumerate}[itemsep=1ex]
         \item 
 	$p_{X}(1) = \frac{67}{72}$
         \item 
