--- a/ncert/bernoulli.tex
+++ b/ncert/bernoulli.tex
@@ -100,14 +100,7 @@ What is the probability that the ball drawn is
 \begin{enumerate} \item red ? \item not red? \end{enumerate}
 \solution
 \input{ncert/10/15/1/8/main.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
-\\
+\item Someone is asked to take a number from 1 to 100. The probability that it is a prime number is\\
 \solution
-%\input{ncert/12/13/5/7/main.tex}
-\item The probability of getting a bad egg in a lot of 400 is 0.035. The number of bad eggs in the lot is\\
-\solution
-%\input{exemplar/10/13/1/22/main.tex}
-\item someone is asked to take a number from 1 to 100.The probability that it is a prime number is\\
-\solution
-%\input{ncert/10/13/1/25/ncert.tex}
+\input{ncert/10/13/1/25/ncert.tex}
     \end{enumerate}
