--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -591,4 +591,7 @@ two children, what is the conditional probability that both are girls given that
 \\
 \solution
 \input{ncert/12/13/5/7/main.tex}
+\item The probability of getting a bad egg in a lot of 400 is 0.035. The number of bad eggs in the lot is\\
+\solution
+%\input{exemplar/10/13/1/22/main.tex}
 \end{enumerate}
